--- a/webapp/app/partials/modelDesigner/model_dimensions.html
+++ b/webapp/app/partials/modelDesigner/model_dimensions.html
@@ -18,6 +18,7 @@
 
 <div ng-controller="ModelDimensionsCtrl">
 
+   <ng-form name="forms.model_dimensions_form" novalidate>
     <!-- Dimensions Summary -->
     <div class="dataTables_wrapper form-inline no-footer">
         <div class="row"  ng-if="state.mode=='view'&&model.dimensions.length > 0">
@@ -32,8 +33,8 @@
             </div>
         </div>
 
-        <ng-form name="forms.model_dimensions_form" novalidate>
          <!-- VIEW MODE -->
+        <div class="row">
             <table class="table table-striped table-hover" ng-if="state.mode=='view'&&model.dimensions.length > 0">
                 <thead>
                     <tr>
@@ -53,13 +54,13 @@
                             <span>{{dimension.table}}</span>
                         </td>
                         <!--Table Name -->
-                        <td>
+                        <td class="tb-breakword">
                             <span>{{dimension.columns}}</span>
                         </td>
                     </tr>
                 </tbody>
             </table>
-        </ng-form>
+        </div>
         <div  ng-if="state.mode=='edit'" class="form-group model-dimension-edit" style="width: 100%">
             <h4 style="margin-left:42px">Dimensions</h4>
             <table style="margin-left:42px; width:92%"
@@ -82,7 +83,7 @@
                     <td class="col-xs-9">
                         <!-- Dimensions -->
                         <select ng-if="state.mode=='edit'" style="width: 100%"
-                                ng-model="model.dimensions[$index].columns" required chosen multiple
+                                ng-model="model.dimensions[$index].columns" chosen multiple
                                 ng-change=""
                                 ng-options="column.name as column.name for column in getColumnsByTable(dimension.table)">
                             <option value=""></option>
@@ -93,4 +94,5 @@
          </div>
 
     </div>
+   </ng-form>
 </div>
