--- a/webapp/app/partials/projects/project_table_tree.html
+++ b/webapp/app/partials/projects/project_table_tree.html
@@ -24,7 +24,7 @@
     </div>
     <div class="space-4"></div>
     <div style="width:310px; height:800px; overflow:auto">
-        <abn-tree ng-if="selectedSrcDb.length > 0"
+        <abn-tree
                 tree-data         = "selectedSrcDb"
                 tree-control      = "my_tree"
                 icon-leaf         = "fa fa-columns"
